# opengl-first-project

./: CMakeLists.txt
game_config/: keymaps backup.json  keymaps.json
lib/: glad.c  glad.h
models/Gold_Ore_Block/: Gold.blend  Gold.blend1  Gold.mtl
models/Sponza-master/textures/: sponza_floor_a_ddn.tga  sponza_floor_a_diff.tga
models/Windfall/: LOD11.dae  Room11.dae  Room11_bake.dae  light.dae  light_bake.dae  materials_shikari.txt  materials_water.txt  sgondor.dae  sgondor_bake.dae  shikari.dae  shikari_bake.dae  skanran.dae  skanran_bake.dae  stoudai.dae  stoudai_bake.dae  water.dae  water_bake.dae
src/: camera.hpp  cube.hpp  fragment.glsl  helpers.hpp  keymap.hpp  main.cpp  models.hpp  shader.hpp  textures.hpp  vertex.glsl
